cowdancer (0.55) UNRELEASED; urgency=low

  * COWDANCER_DEBUG=1 sent some output to stdout which broke some cases,
    now outputs to stderr, which is more safe.

 -- Junichi Uekawa <dancer@debian.org>  Sun, 12 Apr 2009 11:31:47 +0900

cowdancer (0.54) unstable; urgency=low

  * Really fix i386 qemubuilder; compile with LFS option.
  * Run 'make fastcheck' after build so that I know builds are reasonable.
    Running 'make slowcheck' needs a bit more work.
  * change bash completion
  * add work-around for udev bug #520742, add /etc/udev/disabled

 -- Junichi Uekawa <dancer@debian.org>  Fri, 10 Apr 2009 07:38:47 +0900

cowdancer (0.53) unstable; urgency=low

  * Fix i386 cowdancer, rollback to only use large file support for
    qemubuilder.  cowbuilder and cowdancer seem to need more changes to
    get LFS working. (closes: #520994)

 -- Junichi Uekawa <dancer@debian.org>  Wed, 25 Mar 2009 08:57:45 +0900

cowdancer (0.52) unstable; urgency=low

  * Fix build error on i386. 
    libcowdancer cannot be built with LFS on i386. Disable LFS for now.
    (closes: #520861)

 -- Junichi Uekawa <dancer@debian.org>  Mon, 23 Mar 2009 22:27:51 +0900

cowdancer (0.51) unstable; urgency=low

  * add largefile support flags so that qemubuilder works properly in
    32-bit mode. (closes: #520721)

 -- Junichi Uekawa <dancer@debian.org>  Mon, 23 Mar 2009 08:32:54 +0900

cowdancer (0.50) unstable; urgency=low

  * add handling for inputfile / outputfile options, --inputfile is
    implemented.
  * do not use external resolv.conf inside qemu.
  * add 'quiet' option to kernel booting inside qemu.
  * Set the current time inside chroot for pbuilder create target as
    well.

 -- Junichi Uekawa <dancer@debian.org>  Sat, 21 Mar 2009 11:08:44 +0900

cowdancer (0.49) unstable; urgency=low

  * qemubuilder: depend on debootstrap. (closes: #496077)
  * cowbuilder package: split out from cowdancer. cowdancer can be useful
    in more cases than cowbuilder. (closes: #459436)