@@ -78,8 +78,14 @@ Utilized to preload
 
 .TP
 .B "COWDANCER_DEBUG"
+Debugging option. 
 Enables debug messages.
-cowdancer will give debug messages in standard error output.
+cowdancer will give verbose debug messages in standard error output.
+
+.TP
+.B "COWDANCER_SO"
+Debugging option. 
+Specifies a different path for libcowdancer.so.
 
 .TP
 .B "COWDANCER_REUSE=yes"
