@@ -2,8 +2,12 @@ cowdancer (0.55) UNRELEASED; urgency=low
 
   * COWDANCER_DEBUG=1 sent some output to stdout which broke some cases,
     now outputs to stderr, which is more safe.
+  * Now make check runs.
+  * environment variable COWDANCER_SO specifies location of
+    libcowdancer.so, default is /usr/lib/cowdancer/libcowdancer.so,
+    useful for running tests on just-built cowdancer.
 
- -- Junichi Uekawa <dancer@debian.org>  Sun, 12 Apr 2009 11:31:47 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sun, 12 Apr 2009 13:59:21 +0900
 
 cowdancer (0.54) unstable; urgency=low
 
